--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ button {
     width: 100%;
     padding: 10px;
     font-size: medium;
+    position: relative;
+    cursor: pointer;
 }
 
 a {
@@ -30,4 +32,97 @@ p {
     border-left: solid #69696a;
     padding: 5px;
     color: #69696a;
+}
+
+.text-logo {
+    color: black;
+    cursor: pointer;
+}
+
+
+
+@media (min-width: 768px) {
+    .circles {
+        position: fixed;
+        top: 200px;
+        right: 0px;
+    }
+    
+    .circle1 {
+        background-color: rgba(247, 136, 167, 0.6);
+        height: 200px;
+        width: 200px;
+        border-radius: 50%;
+        display: inline-block;
+    }
+    
+    .circle2 {
+        background-color: rgba(247, 193, 162, 0.7);
+        height: 175px;
+        width: 175px;
+        border-radius: 50%;
+        display: inline-block;
+        position: fixed;
+        right: 45px;
+        top: 300px;  
+    }
+    
+    .circle3 {
+        background-color: rgba(207, 130, 213, 0.6);
+        height: 125px;
+        width: 125px;
+        border-radius: 50%;
+        display: inline-block;
+        position: relative;
+        right: 45px;
+        top: -50px;
+
+    }
+    
+    button {
+        width: 125px;
+        height: 45px;
+        
+    }
+    
+    .scroll {
+        position: absolute;
+        bottom: 0px;
+        left: 43%;
+        margin-bottom: 10px;
+    }
+
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: 50%;
+        padding: 10px
+    }
+
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 5%;
+    }
+
+    nav {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .nav-links {
+        display: flex;
+        justify-content: flex-end;
+        padding-left: 850px;
+    }
+
+    .nav-links li {
+        margin: 5px; 
+        justify-content: flex-end; 
+        
+    }
+
 }
